# codex_experiment_06

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  build_rust.sh  check-toolchain.sh  debugprobe_on_pico2_with_reset.uf2  flash_backup.sh  flash_project.sh  flash_restore.sh  gdb_debug.sh  openocd_debug.sh  probe.sh
.cargo/: config.toml
datasheets/: CATALOG.md
docs/: blue_led_current_sweep_report_2026-03-10.md  blue_led_spectrum_report_2026-03-10.md  bp_monitor_local_ai_reader_proposal.md  bp_monitor_reader_resume_2026-03-29.md  dps150_sweep_report_2026-03-06.md  experiment_ideas.md  fnirsi_dpi_150_usb_protocol.md  green_led_current_sweep_rigol_report_2026-03-10.md  local_lcd_ai_reader_project_plan.md  psoc4_cy8ckit_049_42xx_notes.md  stm32_sd_write_benchmark_report_2026-03-12.md  time_travel_1800_computing_thesis.md  tiny_vm_c_vs_rust_analysis.md  ultrasonic_ranger_uart_protocol.md  web_debugger_api_contract.md  web_debugger_visualization_proposal.md
experiments/: bp_monitor_ground_truth.csv  bp_monitor_labeling_prompt.md
include/: lpc111x_min.h
linker/: lpc1114.ld
openocd/: base.cfg  probe.cfg  tiva_tm4c123gxl.cfg
projects/tiny_vm/ch32v003_rust/: Cargo.toml  memory.x
projects/tiny_vm/ch32v003_rust/src/: lib.rs
results/: blue_led_current_sweep_spectra.csv  blue_led_current_sweep_summary.csv  blue_led_recheck_iv.csv  blue_led_spectrum.csv  blue_led_spectrum_1ma.csv  blue_led_spectrum_1p25ma.csv  blue_led_spectrum_1p5ma.csv  blue_led_spectrum_2ma.csv  dps150_sweep.csv  dps150_sweep_fine.csv  green_led_current_sweep_rigol_spectra.csv  (+8 more)
(+311 files in other folders)
