[workspace]
resolver = "2"

members = [
  "common/rust",
  "projects/sram_test/rust",
  "projects/uart_counter/rust",
  "projects/uart_smoke/rust",
  "projects/blink/lpc1114_rust",
  "projects/blink/ch32v003_rust",
  "projects/tiny_vm/lpc1114_rust",
  "projects/tiny_vm/tm4c123gxl_rust",
]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
